--- a/project/report.bib
+++ b/project/report.bib
@@ -25,3 +25,32 @@
   year={2007},
   note = "\url{http://www.vatsals.com/Essays/MachineLearningTechniquesforStockPrediction.pdf}"
 }
+
+@article{lsi,
+  title={Indexing by latent semantic analysis},
+  author={Deerwester, S. and Dumais, S.T. and Furnas, G.W. and Landauer, T.K. and Harshman, R.},
+  journal={Journal of the American society for information science},
+  volume={41},
+  number={6},
+  pages={391--407},
+  year={1990}
+}
+
+@inproceedings{plsi,
+  title={Probabilistic latent semantic indexing},
+  author={Hofmann, T.},
+  booktitle={Proceedings of the 22nd annual international ACM SIGIR conference on Research and development in information retrieval},
+  pages={50--57},
+  year={1999},
+  organization={ACM}
+}
+
+@article{lda,
+  title={Latent dirichlet allocation},
+  author={Blei, D.M. and Ng, A.Y. and Jordan, M.I.},
+  journal={the Journal of machine Learning research},
+  volume={3},
+  pages={993--1022},
+  year={2003},
+  publisher={JMLR. org}
+}
