--- a/project/report.tex
+++ b/project/report.tex
@@ -118,6 +118,7 @@ The primary technique we use is Latent Semantic Indexing~(LSI)~\cite{lsi}. The i
 
 In this section we describe the different classifiers we developed for this project.
 For each classifiers we describe our implementation choices and what, if any, third-party libraries we used.
+We implemented all of our classifiers as MATLAB functions.
 
 Our classifiers can roughly be divided into four categories. The first are simple prediction rules. These are mostly included to demonstrate features of our data and to serve as baselines for the other classifiers. The next class include classifiers that do not have a probabilistic model. These include AdaBoost, Nearest Neighbor and SVM. The third class consist of classifiers based on probabilistic models. The only classifiers we implemented in this category is Naive Bayes. The fourth and final class of classifiers is sequential models and include M-order Markov Models and Hidden Markov Models.
 
@@ -125,12 +126,10 @@ Our classifiers can roughly be divided into four categories. The first are simpl
 \label{sec:naive-bayes}
 
 The first classifier we implemented was Naive Bayes.
-Naive Bayes is a natural choice when the input features are discrete with very high dimensionality (such as bag of words).
-The reason for this is the naive bayes assumption, which asserts that the input features are independent.
+Naive Bayes is a natural choice when the input features are discrete with very high dimensionality, which is the case with our bags of words and phrases.
+The reason for this is the naive bayes assumption, which asserts that the input features are independent given the class.
 This means we can turn the multinomial on the full distribution, which has $O(2^D)$ parameters into $D$ binomials with $O(D)$ parameters.
 That is, $p(Y|X) \propto p(Y)p(X|Y) = p(Y)\prod_{i=1}^{D}{p(X^{(i)}|Y)}$, where $p(Y)$ is a prior on $Y$ (we will take advantage of the opportunity to put a prior on $Y$ later).
-
-\TODO{Are the input features independent or are they independent conditioned on the class?}
 
 Although this assumption may seem \emph{overly} naive, it has proven to work well on document classification tasks such as spam detection, which are similar to our problem.
 It is also a probabilistic model, as opposed to most of our other classifiers, which means we can combine it with temporal probabilistic models.
@@ -156,7 +155,9 @@ Since LSI reduces the dimensionality of the feature space to identify latent fea
 \subsection{Support Vector Machine}
 \label{sec:svm}
 
-We used our implementation of kernalized Support Vector Machines (SVM) with slack variables from a previous assignment. Our implementation is parameterized by $C$, which represents the weight given to the slack variables in the optimization problems. Higher values of $C$ give a harder margin SVM, but they tend to generalize worse.
+We used our implementation of dual form kernalized Support Vector Machines (SVM) with slack variables from a previous assignment.
+\TODO{Insert this sentence here?: This implementation uses the MATLAB quadprog function to solve the resulting quadratic optimization problem.}
+Our implementation is parameterized by $C$, which represents the weight given to the slack variables in the optimization problems. Higher values of $C$ give a harder margin SVM, but they tend to generalize worse.
 
 Since it doesn't make sense to train an SVM on a bag of words, we use the feature vectors resulting from LSI as described in Section~\ref{sec:topicmodel}.
 
@@ -193,11 +194,37 @@ That is, we combine our prior belief about which way we think the market will go
 This is illustrated in figure~\TODO{ref}. 
 
 
-\section{Analysis}
+\section{Evaluation and Analysis}
 
-\subsection{Temporal Shift}
+In this section we seek to answer the following research questions:
+\begin{description}
+\item[Question 1] Can we predict the movements of the Dow Jones based on the content of the Wall Street Journal?
+\item[Question 2] Can the movement of the Dow Jones be predicted based on past performance?
+\item[Question 3] Can we predict the future performance of the stock market to make money?
+\end{description}
+
+To answer question 1 and 2 we perform a sequence of experiments that evaluate how well our suite of classifiers can make predictions based on our data set.
+In section~
 
 
+In this section we evaluate our classifiers and look for the one we think will make us the most money.
+We also perform experiments, such as the temporal shift experiment, to try to gain further insight into our dataset.
+
+We use two different experimental setups.
+The first setup is for non-temporal models.
+Here we imagine that we are at the end of November 2007 and have access to all issues of the Wall Street Journal and all Dow Jones moves January-November.
+We are now trying to predict every day in November.
+
+Sequential Models...
+
+\subsection{Predicting the Dow Jones based on the Wall Street Journal}
+
+\begin{itemize}
+\item The word ``ambitions'' is the best indicator of the Dow Jones gaining. If ``ambitions'' appeared in the WSJ there was a 64.26\% chance that the Dow Jones went up on that day.
+\item The word ``tundra'' is the best indicator of the Dow Jones falling. If ``tundra'' appeared in the WSJ there was a 64.26\% chance that the Dow Jones fell on that day. This is because a series of articles in the WSJ where they talk about how Toyota is producing more cars outside the us and where they mention the Toyota Tundra. Another item is how Toyota is passing GM in sales (tundra is mentioned). A third item is about how Tundras had to be discounted (Toyota is on the Dow Jones).
+
+
+\subsubsection*{Temporal Shift}
 Temporal shifting trades information about the current day for information about the previous (or next) day.
 
 
@@ -205,11 +232,14 @@ The bag features $B$ associate each day's price direction in $Y$ with the same d
 
 We introduce temporally shifted feature matrices to investigate these possibilities, defined by $F_{d,i} = B_{d-1,i}$ and $F_{d,i} = B_{d+1,i}$ That is, each count is replaced either by the previous day's count or the next day's count. The first and last days' counts will be 0 respectively, so this loses some information for one day each.
 
-\begin{itemize}
-\item The word ``ambitions'' is the best indicator of the Dow Jones gaining. If ``ambitions'' appeared in the WSJ there was a 64.26\% chance that the Dow Jones went up on that day.
-\item The word ``tundra'' is the best indicator of the Dow Jones falling. If ``tundra'' appeared in the WSJ there was a 64.26\% chance that the Dow Jones fell on that day. This is because a series of articles in the WSJ where they talk about how Toyota is producing more cars outside the us and where they mention the Toyota Tundra. Another item is how Toyota is passing GM in sales (tundra is mentioned). A third item is about how Tundras had to be discounted (Toyota is on the Dow Jones).
+\subsection{Predicting the Dow Jones based on trends}
+
+
+\subsection{Predicting the future performance of the Dow Jones}
 
 \end{itemize}
+
+\section{Future Work}
 
 \bibliographystyle{plain}
 \bibliography{report.bib}
