--- a/project/report.tex
+++ b/project/report.tex
@@ -181,34 +181,40 @@ We implemented M-order Markov Models for any value of M. However, since the numb
 \label{sec:}
 
 We also implemented a classifier for the more powerful Hidden Markov Models. An HMM assumes the observed values $Y$ are generated from a sequence of hidden states $Z$.
-The evolution of the hidden states is governed by the conditional probability distribution $p(Z_{i}|Z_{i-1})$ and the values of $Y_{i}$ are governed by the conditional probability distribution $p(Y_{i}|Z_{i})$.
-This is depicted graphically as a Bayes Net in figure~\TODO{ref}.
+The evolution of the hidden states is governed by the conditional probability distribution $p(Z^{(i)}|Z^{(i-1)})$ and the values of $Y_{i}$ are governed by the conditional probability distribution $p(Y^{(i)}|Z^{(i)})$.
+%This is depicted graphically as a Bayes Net in figure~\TODO{ref}.
 
-The HMM classifier is trained using the values $Y_{1}...Y_{t}$ and then used to predict value $Y_{t+1}$.
+The HMM classifier is trained using the values $Y^{(1)}...Y^{(t-1)}$ and then used to predict value $Y^{(t)}$.
 We used the MATLAB HMM Toolkit to learn the maximum-likelihood estimation of the model parameters A (the transition matrix) and B (the emission matrix) using the hmmtrain function, which internally uses the EM algorithm.
-We then used the function hmmdecode to generate the posterior probability on state $Z_{t}$.
-We then performed standard message passing along the chain from $Z_{t}$ to $Y_{t+1}$ to evaluate the marginal $p(Y_{t+1})$, which we used to predict $Y_{t+1}$.
+We then used the function hmmdecode to generate the posterior probability on state $Z^{(t-1)}$.
+We then performed standard message passing along the chain from $Z^{(t-1)}$ to $Y^{(t)}$ to evaluate the marginal $p(Y^{(t)})$, which we used to predict $Y^{(t)}$.
 Figure~\ref{fig:hmm-predict} illustrated this model.
 
 \begin{figure}
 \center
 \includegraphics[width=6cm]{figs/hmm-predict.pdf}
-\caption{Predicting the movement of the Dow Jones the next day ($Y_{t+1}$) using a Hidden Markov Model.}
+\caption{Predicting the movement of the Dow Jones on day $t$ ($Y^{(t)}$) using a Hidden Markov Model to model trends in past performance.}
 \label{fig:hmm-predict}
 \end{figure}
 
 In a variation on this approach we combined the Hidden Markov Model with Naive Bayes to make prediction both based on trends in the market and based on the articles in the Wall Street Journal.
-To do this we first evaluated the marginal $p(X_{t+1})$ as described above.
-We then trained a Naive Bayes predictor on the first $t$ (X,Y) tuples and used this to predict the value of $X_{t+1}$, using marginal $p(X_{t+1})$ from the HMM as a prior.
+To do this we first evaluated the marginal $p(Y^{(t)})$ as described above.
+We then trained a Naive Bayes predictor on the first $t-1$ tuples, $\{(X^{(1)},Y^{(1)}), ..., (X^{(t-1)},Y^{(t-1)})\}$, and used this to predict the value of $Y_{t}$, using marginal $p(Y_{t})$ from the HMM as a prior.
 That is, we combine our prior belief about which way we think the market will go based on recent performance, with the new information in the WSJ.
-This is illustrated in figure~\TODO{ref}. 
+This is illustrated in figure~\ref{fig:hmm-nb-predict}. 
 
+\begin{figure}
+\center
+\includegraphics[width=6cm]{figs/hmm-nb-predict.pdf}
+\caption{Predicting the movement of the Dow Jones on day $t$ ($Y^{(t)}$) using a Hidden Markov Model to model trends in past performance, combined with Naive Bayes to incorporate information in the Wall Street Journal.}
+\label{fig:hmm-nb-predict}
+\end{figure}
 
 \section{Evaluation and Analysis}
 
 In this section we seek to answer the following research questions:
 \begin{description}
-\item[Question 1] Can we predict the movement of the Dow Jones based on the content of the Wall Street Journal?
+\item[Question 1] Can we predict the movement of the Dow Jones based on the Wall Street Journal?
 \item[Question 2] Can we predict the movement of the Dow Jones based on past performance?
 \item[Question 3] Can we predict the future performance of the stock market to make money?
 \end{description}
